// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty initial state 1`] = `
Object {
  "action": Object {
    "0": Object {
      "": Object {
        "data": 123,
        "loading": false,
      },
    },
  },
}
`;

exports[`predefined state shouldns overwrite 1`] = `
Object {
  "action": Object {
    "test": Object {
      "": Object {
        "d": 999,
      },
    },
  },
}
`;

exports[`test awaitAll to cache 1`] = `Object {}`;

exports[`test impl for createFetcher 1`] = `
Object {
  "action": Object {
    "test": Object {
      "": Object {
        "d": 999,
      },
    },
  },
}
`;
